--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -27,11 +27,22 @@
                 android:layout_toRightOf="@id/group_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:textColor="#000000"
                 android:layout_marginLeft="20dp"
-                android:text=""
+                android:text="11"
                 />
+            <TextView
+                android:id="@+id/mac_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="123"
+                android:layout_marginTop="3dp"
+                android:textSize="14sp"
+                android:layout_below="@+id/group_tv"
+                android:layout_alignLeft="@+id/group_tv"
+                android:layout_alignStart="@+id/group_tv" />
+
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/repeater_rela"
