--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,12 +5,46 @@
     android:orientation="vertical"
     android:background="#ffffff"
     >
-    <include android:id="@+id/title_include" layout="@layout/title_bar"/>
+    <RelativeLayout
+        android:id="@+id/title_rela"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/login_btn"
+        >
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+        <ImageView
+            android:id="@+id/add_fire"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:src="@drawable/erweima"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:visibility="gone"
+            />
+
+        <ImageView
+            android:id="@+id/search_fire"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
+            android:src="@drawable/search_condition_selector"
+            android:visibility="gone"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            />
+
+    </RelativeLayout>
     <include
         android:id="@+id/search_include"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_below="@id/title_include"
+        android:layout_below="@id/title_rela"
         layout="@layout/include_search"/>
 
     <com.baidu.mapapi.map.MapView
