地图搜索，bug修复

--- a/app/src/main/res/layout/include_search.xml
+++ b/app/src/main/res/layout/include_search.xml
@@ -15,7 +15,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="5dp"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                />
             <com.smart.cloud.fire.view.XCDropDownListViewMapSearch
                 android:id="@+id/shop_type_condition"
                 android:layout_width="0dp"
@@ -24,6 +25,37 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="2"/>
         </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lin_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:background="#ffffff">
+        <EditText
+            android:id="@+id/area_search"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:hint="请输入要查询的内容"
+            />
+        <Button
+            android:id="@+id/search_fire_btn"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:background="#ff0033"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+
+            android:text="查询"
+            android:textColor="#fff"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/smoke_total"
