--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -13,9 +13,19 @@
         >
         <Spinner
             android:id="@+id/spinner"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            />
+        <TextView
+            android:id="@+id/title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="#ffffff"
             android:layout_centerInParent="true"
+            android:textSize="18sp"
             />
         <ImageView
             android:id="@+id/add_fire"
