--- a/app/src/main/res/layout/collect_fragment_adapter.xml
+++ b/app/src/main/res/layout/collect_fragment_adapter.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:textColor="#404040"
-                android:text="广东省广州市天河区王的就是拉法基阿斯顿发阿斯顿发放"/>
+                android:text="广东省广州市天河区"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
