--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -104,7 +104,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:id="@+id/lin_principal">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -146,7 +147,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:id="@+id/lin_principa2">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
