--- a/app/src/main/res/layout/fragment_all_dev.xml
+++ b/app/src/main/res/layout/fragment_all_dev.xml
@@ -19,6 +19,7 @@
                  android:id="@+id/recycler_view"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
+                 android:paddingBottom="60dp"
                  ></android.support.v7.widget.RecyclerView>
          </android.support.v4.widget.SwipeRefreshLayout>
         <include layout="@layout/progress_bar"/>
