--- a/app/src/main/res/layout/fragment_camera_dev.xml
+++ b/app/src/main/res/layout/fragment_camera_dev.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:background="#e6e6e6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#e6e6e6">
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipere_fresh_layout"
             android:layout_width="match_parent"
@@ -19,7 +19,6 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="60dp"
                 ></android.support.v7.widget.RecyclerView>
         </android.support.v4.widget.SwipeRefreshLayout>
         <include layout="@layout/progress_bar"/>
