--- a/app/src/main/res/layout/activity_chioce_dev_type.xml
+++ b/app/src/main/res/layout/activity_chioce_dev_type.xml
@@ -138,6 +138,28 @@
                     android:gravity="center"
                     android:textSize="16sp"/>
             </LinearLayout>
+            <LinearLayout
+                android:id="@+id/nfc_lin"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/dqfh_lin"
+                android:layout_toRightOf="@id/spjk_lin"
+                android:orientation="vertical">
+                <ImageButton
+                    android:id="@+id/nfc_btn"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/add_nfc_selector"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="NFC"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:textSize="16sp"/>
+            </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
 
