--- a/app/src/main/res/layout/user_smoke_address_mark.xml
+++ b/app/src/main/res/layout/user_smoke_address_mark.xml
@@ -52,6 +52,7 @@
 
         </RelativeLayout>
         <LinearLayout
+            android:id="@+id/contact1_lin"
             android:layout_width="match_parent"
             android:layout_height="40dp">
             <LinearLayout
@@ -91,6 +92,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/contact2_lin"
             android:layout_width="match_parent"
             android:layout_height="40dp">
             <LinearLayout
