--- a/app/src/main/res/layout/play_back_date_pick_fire.xml
+++ b/app/src/main/res/layout/play_back_date_pick_fire.xml
@@ -46,7 +46,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="45dp"
 			android:orientation="horizontal">
-			<com.smart.cloud.fire.view.XCDropDownListViewFire
+			<com.smart.cloud.fire.view.AreaChooceListView
 				android:id="@+id/area_type_choice"
 				android:layout_width="0dp"
 				android:layout_weight="1"
