--- a/app/src/main/res/layout/activity_new_air_info.xml
+++ b/app/src/main/res/layout/activity_new_air_info.xml
@@ -4,14 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    android:id="@+id/airinfo_linearLayout"
-    android:background="@drawable/bj_you" >
+    android:id="@+id/airinfo_linearLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4.5"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_info_time"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:gravity="right"
+            android:text="更新时间:"
+            android:textColor="#fff"
+            android:textSize="12sp"/>
         <TextView
             android:id="@+id/tv_info_devname"
             android:layout_width="match_parent"
