--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -101,6 +101,21 @@
                 android:layout_below="@id/tpye_name_tv"
                 android:layout_toRightOf="@id/address_name_tv"
                 android:text="广东省广州市黄浦区"/>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/addtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/address_name_tv"
+                android:text="添加时间："/>
+            <TextView
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addtime_tv"
+                android:layout_below="@id/address_name_tv"
+                android:layout_toRightOf="@id/addtime"
+                android:text="2017-09-16"/>
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
