1级权限界面修改

--- a/app/src/main/res/layout/wiredsmoke_history_adapter.xml
+++ b/app/src/main/res/layout/wiredsmoke_history_adapter.xml
@@ -86,7 +86,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:visibility="gone"
-            android:background="@drawable/add_photo"
+            android:background="@drawable/photo_temp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"/>
     </RelativeLayout>
