--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -187,4 +187,14 @@
                 android:text="12548454848"/>
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/stop_alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textColor="#fff"
+        android:padding="10dp"
+        android:background="@color/login_btn"
+        android:visibility="gone"
+        android:text="确认报警"/>
 </LinearLayout>
