--- a/app/src/main/res/layout/activity_nfcdev.xml
+++ b/app/src/main/res/layout/activity_nfcdev.xml
@@ -13,9 +13,10 @@
         >
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/trace_search"
             android:text="轨迹查询"
+            android:gravity="center"
             android:textColor="#ffffff"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
