--- a/app/src/main/res/layout/layout_children.xml
+++ b/app/src/main/res/layout/layout_children.xml
@@ -2,11 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/smoke_dialog_list_mb"
+    >
     <TextView
         android:id="@+id/second_textview"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center_vertical"
+        android:background="@color/smoke_dialog_list_mb"
+        android:textColor="#fff"
         android:paddingLeft="35dp"/>
 </LinearLayout>
