--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -50,16 +50,31 @@
                 android:layout_toRightOf="@id/mac_name_tv"
                 android:text="102314"/>
             <TextView
-                android:id="@+id/repeater_name_tv"
+                android:id="@+id/state_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/mac_name_tv"
+                android:visibility="gone"
+                android:text="开关："/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/state_tv"
+                android:layout_toRightOf="@id/state_name_tv"
+                android:layout_below="@id/mac_name_tv"
+                android:visibility="gone"
+                android:text="关"/>
+            <TextView
+                android:id="@+id/repeater_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/state_name_tv"
                 android:text="所属中继："/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/repeater_tv"
-                android:layout_below="@id/mac_name_tv"
+                android:layout_below="@id/state_name_tv"
                 android:layout_toRightOf="@id/repeater_name_tv"
                 android:text="10666"/>
             <TextView
