--- a/app/src/main/res/layout/user_smoke_address_mark.xml
+++ b/app/src/main/res/layout/user_smoke_address_mark.xml
@@ -41,8 +41,24 @@
                 android:textColor="#000000"
                 android:text="ID:"/>
             <TextView
-                android:id="@+id/user_smoke_dialog_tv3"
+                android:id="@+id/user_smoke_dialog_tv6"
                 android:layout_below="@id/user_smoke_dialog_tv4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="#000000"
+                android:text="设备类型:"/>
+            <TextView
+                android:id="@+id/user_smoke_dialog_tv5"
+                android:layout_below="@id/user_smoke_dialog_tv6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="#000000"
+                android:text="区域:"/>
+            <TextView
+                android:id="@+id/user_smoke_dialog_tv3"
+                android:layout_below="@id/user_smoke_dialog_tv5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -137,7 +153,7 @@
         android:background="@color/smoke_bian_color"/>
     <Button
         android:id="@+id/normal_lead_btn"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/login_button_selector"
         android:layout_marginTop="10dp"
