--- a/app/src/main/res/layout/dropdownlist_view_fire.xml
+++ b/app/src/main/res/layout/dropdownlist_view_fire.xml
@@ -8,7 +8,7 @@
     
     <EditText
         android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
