--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -140,6 +140,46 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/nfc_mac_add"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:background="@drawable/list_item_color_bg">
+            <ImageView
+                android:id="@+id/nfc_mac_add_image"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/zh_guanyu"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="30dp"
+                />
+
+            <TextView
+                android:layout_toRightOf="@id/nfc_mac_add_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NFC入库"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/camera_list_tv"
+                />
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/lead_right_zx"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:layout_centerVertical="true"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/dao_hang_bian_color"
+                android:layout_alignParentBottom="true"
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/setting_nfc_period"
             android:layout_width="match_parent"
             android:layout_height="50dp"
