--- a/app/src/main/res/layout/wiredsmoke_history_adapter.xml
+++ b/app/src/main/res/layout/wiredsmoke_history_adapter.xml
@@ -19,17 +19,19 @@
             android:text="2016-08-04 17:29:56"/>
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp">
 
 
@@ -107,7 +109,7 @@
             android:background="@drawable/photo_temp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"/>
-    </RelativeLayout>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
