--- a/app/src/main/res/layout/activity_nfcdev.xml
+++ b/app/src/main/res/layout/activity_nfcdev.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/trace_search"
-            android:text="轨迹查询"
+            android:text="更多"
             android:gravity="center"
             android:textColor="#ffffff"
             android:layout_centerVertical="true"
